opam-version: "2.0"
name: "ISO8601"
version: "0.2.6"
synopsis: "ISO 8601 and RFC 3999 date parsing for OCaml"
maintainer: ["c-cube" "ocaml-community"]
authors: "Julien Sagot"
homepage: "http://github.com/ocaml-community/ISO8601.ml/"
doc: "http://ocaml-community.github.io/ISO8601.ml/"
bug-reports: "https://github.com/ocaml-community/ISO8601.ml/issues"
depends: [
  "dune" {>= "2.7"}
  "base-unix"
  "ocaml" {>= "4.03.0"}
  "stdlib-shims" {with-test}
  "odoc" {with-doc}
  "ounit2" {with-test}
  "bisect_ppx" {with-test & >= "2.5" & dev}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/ocaml-community/ISO8601.ml.git"
